tests/type_errors/generic_sort_plus_int.nos
# expect_error: type mismatch
# Sort returns a list, adding Int to a list is a type error
f(xs) = xs.sort() + 1
main() = f([1, 2, 3])
